<?xml version="1.0" encoding="utf-8"?>
<!--
    * Copyright (C) 2014 OpenIntents.org
    *
    *
    * Licensed under the Apache License, Version 2.0 (the "License");
    * you may not use this file except in compliance with the License.
    * You may obtain a copy of the License at
    *
    *      http://www.apache.org/licenses/LICENSE-2.0
    *
    * Unless required by applicable law or agreed to in writing, software
    * distributed under the License is distributed on an "AS IS" BASIS,
    * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    * See the License for the specific language governing permissions and
    * limitations under the License.
-->
<resources>

    <string name="app_name">OI Safe Backup</string>
    <string name="menu_settings">Settings</string>
    <string name="connect">Connect</string>
    <string name="disconnect">Disconnect</string>
    <string name="nolocalbackup">No local backup file %s exists.</string>
    <string name="localBackupExists">Local backup %s exists.</string>
    <string name="send">Send</string>
    <string name="check">Check</string>
    <string name="modified">Modified</string>
    <string name="local_modified">Local Modified</string>
    <string name="dropbox">Dropbox</string>
    <string name="notinstalled">OI Safe is not installed</string>
    <string name="status">Status</string>
    <string name="dropboxHasBackupFile">Dropbox has a backup file</string>
    <string name="dropboxHasBackupFileDeleted">Dropbox has a deleted backup file</string>
    <string name="dropboxNewerBackup">Dropbox has newer backup file</string>
    <string name="rev">rev</string>
    <string name="oisafe">OI Safe</string>
    <string name="get">Get</string>
    <string name="checkForBackups">Checking for backups</string>
    <string name="cancel">Cancel</string>
    <string name="canceled">Canceled</string>
    <string name="uploading">Uploading</string>
    <string name="backupUploaded">Backup successfully uploaded</string>
    <string name="gettingBackup">Getting backup</string>
    <string name="success">Success!</string>
    <string name="couldntAuthenticate">Couldn\'t authenticate with Dropbox</string>
    <string name="local_rev">Local rev</string>

</resources>