<!--
    * Copyright (C) 2014 OpenIntents.org
    *
    *
    * Licensed under the Apache License, Version 2.0 (the "License");
    * you may not use this file except in compliance with the License.
    * You may obtain a copy of the License at
    *
    *      http://www.apache.org/licenses/LICENSE-2.0
    *
    * Unless required by applicable law or agreed to in writing, software
    * distributed under the License is distributed on an "AS IS" BASIS,
    * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    * See the License for the specific language governing permissions and
    * limitations under the License.
-->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:scrollbars="vertical"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/oisafeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:contentDescription="@string/oisafe"
            android:src="@drawable/ic_launcher_safe" />

        <ImageButton
            android:id="@+id/dropboxLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:contentDescription="@string/dropbox"
            android:src="@drawable/dropbox" />

        <Button
            android:id="@+id/connect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/notInstalled"
            android:layout_centerHorizontal="true"
            android:text="@string/connect" />

        <TextView
            android:id="@+id/notInstalled"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:text="@string/notinstalled" />

        <TextView
            android:id="@+id/localBackupStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/connect"
            android:layout_marginTop="24dp"
            android:text="@string/nolocalbackup" />

        <LinearLayout
            android:id="@+id/dropboxConnected"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/localBackupStatus"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/dropboxButtons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <Button
                    android:id="@+id/sendToDropbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:text="@string/send"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/checkDropbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/check"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/getFromDropbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:text="@string/get"
                    tools:ignore="ButtonStyle" />
            </LinearLayout>

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TableRow>

                    <TextView
                        android:id="@+id/labelDbBackupFileStatus"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/status" />

                    <TextView
                        android:id="@+id/dbBackupFileStatus"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </TableRow>

                <TableRow>

                    <TextView
                        android:id="@+id/labelModified"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/modified" />

                    <TextView
                        android:id="@+id/dropboxModified"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="3dp" />
                </TableRow>

                <TableRow>

                    <TextView
                        android:id="@+id/labelDbRev"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/rev" />

                    <TextView
                        android:id="@+id/dbRev"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </TableRow>


                <TableRow>

                    <TextView
                        android:id="@+id/labelLocalModified"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/local_modified" />

                    <TextView
                        android:id="@+id/localModified"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="3dp" />
                </TableRow>

                <TableRow>

                    <TextView
                        android:id="@+id/labelLocalRev"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/local_rev" />

                    <TextView
                        android:id="@+id/localRev"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="3dp"
                        android:text="" />
                </TableRow>
            </TableLayout>
        </LinearLayout>

    </RelativeLayout>
</ScrollView>